student_04_eb4c38de2652/secure-gke/qwiklabs-gcp-04-5ee8d616e010/acm-repo/cluster/constraint-gke-2-k8srequirenamespaceauthzpolicies.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceAuthzPolicies
metadata:
  name: require-namespace-authz-policies
  annotations:
    configsync.gke.io/cluster-name-selector: CLUSTER_2
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - istio-system
      - asm-gateways
      - gke-connect
      - default
