student_04_eb4c38de2652/secure-gke/qwiklabs-gcp-04-5ee8d616e010/acm-repo/cluster/constrainttemplate-destinationruletlsenabledbeta.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Prohibits disabling TLS for all hosts and host subsets in Istio DestinationRules.
  name: destinationruletlsenabledbeta
spec:
  crd:
    spec:
      names:
        kind: DestinationRuleTLSEnabledBeta
      validation:
        legacySchema: true
        openAPIV3Schema: {}
  targets:
    - rego: |
        package asm.guardrails.destinationruletlsenabledbeta

        # spec.trafficPolicy.tls.mode == DISABLE
        violation[{"msg": msg}] {
          d := input.review.object

          d.apiVersion == "networking.istio.io/v1beta1"
          d.kind == "DestinationRule"

          tpl := d.spec.trafficPolicy[_]

          tpl == {"mode": "DISABLE"}

          msg := sprintf("spec.trafficPolicy.tls.mode == DISABLE for host(s): %v", [d.spec.host])
        }

        # spec.subsets[].trafficPolicy.tls.mode == DISABLE
        violation[{"msg": msg}] {
          d := input.review.object

          d.apiVersion == "networking.istio.io/v1beta1"
          d.kind == "DestinationRule"

          subset := d.spec.subsets[_]
          subset.trafficPolicy == {"tls": {"mode": "DISABLE"}}

          msg := sprintf("subsets[].trafficPolicy.tls.mode == DISABLE for host-subset: %v-%v", [d.spec.host, subset.name])
        }
      target: admission.k8s.gatekeeper.sh
